--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "vant": "^2.0.6",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.1"
