--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "vant": "^2.0.6",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
@@ -23,6 +24,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "lint-staged": "^8.1.5",
+    "postcss-pxtorem": "^4.0.1",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
