--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.19.0",
     "vant": "^2.0.6",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
