--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
+    "dayjs": "^1.8.15",
     "vant": "^2.0.6",
     "vee-validate": "^2.2.12",
     "vue": "^2.6.10",
